--- a/index.html
+++ b/index.html
@@ -100,10 +100,9 @@
       </section>
     </main>
     <footer>
-      <a href="">webstudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
-        Increase the flow of customers and <br />
-        sales for your business with digital <br />
+        Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
