--- a/index.html
+++ b/index.html
@@ -70,13 +70,17 @@
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <img src="images/rectangle71.jpg" alt="monitor" width="360" />
+            <img src="./images/rectangle71.jpg" alt="monitor" width="360" />
           </li>
           <li>
-            <img src="images/rectangle71(1).jpg" alt="apps" width="360" />
+            <img src="./images/rectangle71(1).jpg" alt="apps" width="360" />
           </li>
           <li>
-            <img src="images/rectangle71(2).jpg" alt="smartphone" width="360" />
+            <img
+              src="./images/rectangle71(2).jpg"
+              alt="smartphone"
+              width="360"
+            />
           </li>
         </ul>
       </section>
@@ -85,22 +89,22 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="images/img.jpg" alt="team card(1) " width="264" />
+            <img src="./images/img.jpg" alt="team card(1) " width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="images/img(1).jpg" alt="team card(2) " width="264" />
+            <img src="./images/img(1).jpg" alt="team card(2) " width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="images/img(2).jpg" alt="team card(3) " width="264" />
+            <img src="./images/img(2).jpg" alt="team card(3) " width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="images/img(3).jpg" alt="team card(4) " width="264" />
+            <img src="./images/img(3).jpg" alt="team card(4) " width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
