--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Studio</title>
   </head>
   <body>
+    <!-- header -->
     <header>
       <nav>
         <a href="./index.html">WebStudio</a>
@@ -23,49 +24,50 @@
       </address>
     </header>
 
+    <!-- main content -->
     <main>
+      <!-- section_1 -->
       <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
+
+      <!-- section_2 -->
       <section>
         <h2>hidden header</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
             <p>
-              Our goal is to identify the business<br />
-              problem to walk away with the <br />
+              Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
             <h3>Punctuality</h3>
             <p>
-              Bring the key message to the <br />
-              brand's audience for the best price<br />
+              Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
             <h3>Diligence</h3>
             <p>
-              Research and confirm brands that <br />
-              present the strongest digital growth <br />
-              opportunities and minimize risk.
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
             </p>
           </li>
           <li>
             <h3>Technologies</h3>
             <p>
-              Design practice focused on digital <br />
-              experiences. We bring forth a deep <br />
-              passion for problem-solving.
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
 
+      <!-- section_3 -->
       <section>
         <h2>What are we doing</h2>
         <ul>
@@ -85,6 +87,7 @@
         </ul>
       </section>
 
+      <!-- section_4 -->
       <section>
         <h2>Our Team</h2>
         <ul>
@@ -111,6 +114,8 @@
         </ul>
       </section>
     </main>
+
+    <!-- footer -->
     <footer>
       <a href="./index.html">WebStudio</a>
       <p>
